// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Spruce Form Example 1 1`] = `
<div>
  <h3
    className="css-f090xx-StyledH3 e1c06qt21 leafygreen-ui-1hbs73"
  >
    Distro Projects
  </h3>
  <div
    className="css-197y785-StyledCard e1c06qt20 leafygreen-ui-fe135o"
  >
    <form
      className="rjsf"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="form-group field field-object"
      >
        <fieldset
          id="root"
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <div
                className="css-12pm1mq-MaxWidthContainer eyx6h6k0"
              >
                <div
                  className=""
                >
                  <label
                    className="leafygreen-ui-1v870ns"
                    id="select-1-label"
                  >
                    Project Cloning Method
                  </label>
                  <button
                    aria-controls="select-1-menu"
                    aria-describedby="select-1-description"
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-invalid={false}
                    aria-labelledby="select-1-label"
                    className="leafygreen-ui-p6v5m8"
                    data-testid="leafygreen-ui-select-menubutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                    value="legacy-ssh"
                  >
                    <div
                      className="leafygreen-ui-1ktj4tm"
                    />
                    <div
                      className="leafygreen-ui-sl5lf4"
                    >
                      <div
                        className="leafygreen-ui-e32n5q"
                      >
                        <div
                          className="leafygreen-ui-17aj16e"
                        >
                          Legacy SSH
                        </div>
                      </div>
                      <span
                        className="leafygreen-ui-18n6mp2"
                      >
                        <svg
                          alt=""
                          aria-hidden={true}
                          className="leafygreen-ui-195unnb"
                          height={16}
                          role="presentation"
                          viewBox="0 0 16 16"
                          width={16}
                        >
                          <path
                            d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-array"
          >
            <h6
              className="css-ho1tq1-StyledSubtitle e63qz861 leafygreen-ui-11wdjex"
              id="root_expansions__title"
            >
              Expansions
            </h6>
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <button
                aria-disabled={false}
                className="leafygreen-ui-1jc9h6q"
                data-cy="add-button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <div
                  className="leafygreen-ui-1ktj4tm"
                />
                <div
                  className="leafygreen-ui-ie0uqp"
                >
                  <svg
                    alt=""
                    aria-hidden={true}
                    className="leafygreen-ui-1my2s1b"
                    fill="none"
                    height={16}
                    role="presentation"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M7.5 2a1 1 0 00-1 1v3.5H3a1 1 0 00-1 1v1a1 1 0 001 1h3.5V13a1 1 0 001 1h1a1 1 0 001-1V9.5H13a1 1 0 001-1v-1a1 1 0 00-1-1H9.5V3a1 1 0 00-1-1h-1z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                  Add
                </div>
              </button>
            </div>
            <div
              className="css-fwqti9-ArrayContainer e7smmlm1"
            >
              <div
                className="css-1hhgr19-ArrayItemRow e7smmlm2"
              >
                <div
                  className="form-group field field-object"
                >
                  <fieldset
                    id="root_expansions_0"
                  >
                    <div
                      className="form-group field field-string"
                    >
                      <div
                        className="css-bm42zs-ElementWrapper ee4bs9n0"
                      >
                        <div
                          className="css-12pm1mq-MaxWidthContainer eyx6h6k0"
                        >
                          <div
                            className="leafygreen-ui-1iyoj2o"
                          >
                            <label
                              className="leafygreen-ui-ly82bp"
                              htmlFor="textinput-2"
                            >
                              key
                            </label>
                            <div
                              className="leafygreen-ui-lzja97"
                            >
                              <div
                                className="leafygreen-ui-1i2djk5"
                              >
                                <input
                                  aria-label="key"
                                  autoComplete="on"
                                  className="leafygreen-ui-1il5lef"
                                  disabled={false}
                                  id="textinput-2"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  required={true}
                                  type="text"
                                  value="Sample Input"
                                />
                                <div
                                  className="leafygreen-ui-3x1o6h"
                                  data-leafygreen-ui="interaction-ring"
                                />
                              </div>
                              <div
                                className="leafygreen-ui-m329s1"
                                data-leafygreen-ui="icon-selector"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-group field field-string"
                    >
                      <div
                        className="css-bm42zs-ElementWrapper ee4bs9n0"
                      >
                        <div
                          className="css-12pm1mq-MaxWidthContainer eyx6h6k0"
                        >
                          <div
                            className="leafygreen-ui-1iyoj2o"
                          >
                            <label
                              className="leafygreen-ui-ly82bp"
                              htmlFor="textinput-3"
                            >
                              value
                            </label>
                            <div
                              className="leafygreen-ui-lzja97"
                            >
                              <div
                                className="leafygreen-ui-1i2djk5"
                              >
                                <input
                                  aria-label="value"
                                  autoComplete="on"
                                  className="leafygreen-ui-1il5lef"
                                  disabled={false}
                                  id="textinput-3"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  required={true}
                                  type="text"
                                  value="Sample Input"
                                />
                                <div
                                  className="leafygreen-ui-3x1o6h"
                                  data-leafygreen-ui="interaction-ring"
                                />
                              </div>
                              <div
                                className="leafygreen-ui-m329s1"
                                data-leafygreen-ui="icon-selector"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  className="css-x2ce4n-ElementWrapper-DeleteButtonWrapper e7smmlm0"
                >
                  <button
                    aria-disabled={false}
                    className="leafygreen-ui-26sqyb"
                    data-cy="delete-item-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <div
                      className="leafygreen-ui-1ktj4tm"
                    />
                    <div
                      className="leafygreen-ui-ie0uqp"
                    >
                      <svg
                        aria-label="Trash Icon"
                        className="leafygreen-ui-1d90lhq"
                        fill="none"
                        height={16}
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="M5 2a1 1 0 011-1h4a1 1 0 011 1h2a1 1 0 011 1v1H2V3a1 1 0 011-1h2zm9 3H2l1.678 8.392A2 2 0 005.64 15h4.72a2 2 0 001.962-1.608L14 5z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-string"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <div
                className="leafygreen-ui-1iyoj2o"
              >
                <label
                  className="leafygreen-ui-ly82bp"
                  htmlFor="textarea-1"
                >
                  Valid Projects
                </label>
                <div
                  className="leafygreen-ui-1cen7zh"
                >
                  <textarea
                    className="leafygreen-ui-1rmmepu"
                    disabled={false}
                    id="textarea-1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    title="Valid Projects"
                    value=""
                  />
                  <div
                    className="leafygreen-ui-3x1o6h"
                    data-leafygreen-ui="interaction-ring"
                  />
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</div>
`;

exports[`storybook Storyshots Spruce Form Example 2 1`] = `
<div>
  <h3
    className="css-f090xx-StyledH3 e1c06qt21 leafygreen-ui-1hbs73"
  >
    Admin Options
  </h3>
  <div
    className="css-197y785-StyledCard e1c06qt20 leafygreen-ui-fe135o"
  >
    <form
      className="rjsf"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="form-group field field-object"
      >
        <fieldset
          id="root"
        >
          <div
            className="form-group field field-boolean"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <label
                className="leafygreen-ui-hfnsvs"
                htmlFor="checkbox-1"
                id="checkbox-1-label"
              >
                <input
                  aria-checked={false}
                  aria-disabled={false}
                  aria-label="checkbox"
                  aria-labelledby="checkbox-1-label"
                  checked={false}
                  className="leafygreen-ui-3bropy"
                  disabled={false}
                  id="checkbox-1"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                <div
                  className="leafygreen-ui-cho4qd"
                  data-leafygreen-ui="checkbox-wrapper"
                >
                  <div
                    className="leafygreen-ui-v3mbc2"
                  />
                </div>
                <span
                  className="leafygreen-ui-1qufm80"
                >
                  Mark distro as a cluster (jobs are not run on this host, used for special purposes).
                </span>
              </label>
            </div>
          </div>
          <div
            className="form-group field field-boolean"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <label
                className="leafygreen-ui-hfnsvs"
                htmlFor="checkbox-2"
                id="checkbox-2-label"
              >
                <input
                  aria-checked={false}
                  aria-disabled={false}
                  aria-label="checkbox"
                  aria-labelledby="checkbox-2-label"
                  checked={false}
                  className="leafygreen-ui-3bropy"
                  disabled={false}
                  id="checkbox-2"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                <div
                  className="leafygreen-ui-cho4qd"
                  data-leafygreen-ui="checkbox-wrapper"
                >
                  <div
                    className="leafygreen-ui-v3mbc2"
                  />
                </div>
                <span
                  className="leafygreen-ui-1qufm80"
                >
                  Disable shallow clone for this distro.
                </span>
              </label>
            </div>
          </div>
          <div
            className="form-group field field-boolean"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <label
                className="leafygreen-ui-hfnsvs"
                htmlFor="checkbox-3"
                id="checkbox-3-label"
              >
                <input
                  aria-checked={false}
                  aria-disabled={false}
                  aria-label="checkbox"
                  aria-labelledby="checkbox-3-label"
                  checked={false}
                  className="leafygreen-ui-3bropy"
                  disabled={false}
                  id="checkbox-3"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                <div
                  className="leafygreen-ui-cho4qd"
                  data-leafygreen-ui="checkbox-wrapper"
                >
                  <div
                    className="leafygreen-ui-v3mbc2"
                  />
                </div>
                <span
                  className="leafygreen-ui-1qufm80"
                >
                  Disable queueing this distro. Tasks already in the task queue will be removed.
                </span>
              </label>
            </div>
          </div>
          <div
            className="form-group field field-boolean"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <label
                className="leafygreen-ui-hfnsvs"
                htmlFor="checkbox-4"
                id="checkbox-4-label"
              >
                <input
                  aria-checked={true}
                  aria-disabled={false}
                  aria-label="checkbox"
                  aria-labelledby="checkbox-4-label"
                  checked={true}
                  className="leafygreen-ui-3bropy"
                  disabled={false}
                  id="checkbox-4"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                <div
                  className="leafygreen-ui-cho4qd"
                  data-leafygreen-ui="checkbox-wrapper"
                >
                  <div
                    className="leafygreen-ui-njm8mk"
                  />
                </div>
                <span
                  className="leafygreen-ui-1qufm80"
                >
                  Decommission hosts of this distro for this update
                </span>
              </label>
            </div>
          </div>
          <div
            className="form-group field field-string"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <div
                aria-label="radio-group-1"
                className="leafygreen-ui-sgfp3"
                role="group"
              >
                <div
                  className="leafygreen-ui-1s4vgyd"
                >
                  <label
                    className="leafygreen-ui-17avto4"
                    htmlFor="radio-group-1-0"
                  >
                    <input
                      aria-checked={false}
                      aria-disabled={false}
                      checked={false}
                      className="leafygreen-ui-x2r5fc"
                      data-leafygreen-ui="input-element"
                      disabled={false}
                      id="radio-group-1-0"
                      name="radio-group-1"
                      onChange={[Function]}
                      type="radio"
                      value="restartJasper"
                    />
                    <div
                      className="leafygreen-ui-5a1vdt"
                      data-leafygreen-ui="radio-input-display-wrapper"
                    >
                      <div
                        className="leafygreen-ui-1y6j5s3"
                        data-leafygreen-ui="radio-input-display"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      />
                      <div
                        className="leafygreen-ui-1cqcpzq"
                        data-leafygreen-ui="interaction-ring"
                      />
                    </div>
                    <div
                      className="leafygreen-ui-3sm8z"
                    >
                      Restart Jasper service on running hosts of this distro for this update
                    </div>
                  </label>
                </div>
                <div
                  className="leafygreen-ui-1s4vgyd"
                >
                  <label
                    className="leafygreen-ui-17avto4"
                    htmlFor="radio-group-1-1"
                  >
                    <input
                      aria-checked={false}
                      aria-disabled={false}
                      checked={false}
                      className="leafygreen-ui-x2r5fc"
                      data-leafygreen-ui="input-element"
                      disabled={false}
                      id="radio-group-1-1"
                      name="radio-group-1"
                      onChange={[Function]}
                      type="radio"
                      value="reprovisionHosts"
                    />
                    <div
                      className="leafygreen-ui-5a1vdt"
                      data-leafygreen-ui="radio-input-display-wrapper"
                    >
                      <div
                        className="leafygreen-ui-1y6j5s3"
                        data-leafygreen-ui="radio-input-display"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      />
                      <div
                        className="leafygreen-ui-1cqcpzq"
                        data-leafygreen-ui="interaction-ring"
                      />
                    </div>
                    <div
                      className="leafygreen-ui-3sm8z"
                    >
                      Reprovision running hosts of this distro for this update
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</div>
`;

exports[`storybook Storyshots Spruce Form Example 3 1`] = `
<div>
  <h3
    className="css-f090xx-StyledH3 e1c06qt21 leafygreen-ui-1hbs73"
  >
    UI Options
  </h3>
  <div
    className="css-197y785-StyledCard e1c06qt20 leafygreen-ui-fe135o"
  >
    <form
      className="rjsf"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="form-group field field-object"
      >
        <fieldset
          id="root"
        >
          <div
            className="form-group field field-boolean"
          >
            <div
              className="css-bm42zs-ElementWrapper ee4bs9n0"
            >
              <label
                className="leafygreen-ui-hfnsvs"
                htmlFor="checkbox-5"
                id="checkbox-5-label"
              >
                <input
                  aria-checked={true}
                  aria-disabled={false}
                  aria-label="checkbox"
                  aria-labelledby="checkbox-5-label"
                  checked={true}
                  className="leafygreen-ui-3bropy"
                  disabled={false}
                  id="checkbox-5"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                <div
                  className="leafygreen-ui-cho4qd"
                  data-leafygreen-ui="checkbox-wrapper"
                >
                  <div
                    className="leafygreen-ui-njm8mk"
                  />
                </div>
                <span
                  className="leafygreen-ui-1qufm80"
                >
                  This is the only visible page element
                </span>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</div>
`;
